httpsvr/yamls/httpsvr-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpsvr
  name: httpsvc
spec:
  type: NodePort
  selector:
    app: httpsvr
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
