httpsvr/yamls/httpsvr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpsvr
  name: httpsvc
  namespace: cloudnative
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpsvr
  type: ClusterIP
